Fix responsiveness on mobile [#148414899]

--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -14,7 +14,6 @@ body {
     color: #202020;
     flex-direction: column;
     align-items: center;
-    max-width: 320px;
 }
 nav {
     width: 100vw;
@@ -130,3 +129,4 @@ form > input[type=submit] {
     line-height: 2.0;
     color: #ffffff;
 }
+
